--- a/public/assets/default.css
+++ b/public/assets/default.css
@@ -1,5 +1,9 @@
 @charset "UTF-8";
 
+:root {
+  color-scheme: light black;
+}
+
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -20,6 +24,13 @@ html {
   background-color: rgb(251, 247, 242);
   overflow-wrap: break-word;
   min-width: 20rem; /* 320px */
+}
+
+@media (prefers-color-scheme: dark) {
+  html {
+    color: white;
+    background-color: rgb(25, 24, 24);
+  }
 }
 
 body {
