--- a/public/assets/default.css
+++ b/public/assets/default.css
@@ -34,11 +34,10 @@ html {
 }
 
 body {
-  padding: 2rem;
+  width: 100%;
+  padding: 1rem;
   margin: 0 auto;
-  width: 30rem;
 }
-
 
 ::-moz-selection {
   background: #b3d4fc;
@@ -64,19 +63,30 @@ header {
           align-items: center;
 }
 header img {
-  margin-right: 2rem;
+  margin-right: 1rem;
   -webkit-box-flex: 0;
       -ms-flex: 0 0 96px;
           flex: 0 0 96px;
   height: 96px;
 }
 
-@media screen and (max-width: 34rem) {
+@media screen and (min-width: 34rem) {
   body {
-    width: 100%;
-    padding: 1rem;
+    padding: 2rem;
   }
   header img {
-    margin-right: 1rem;
+    margin-right: 2rem;
+  }
+}
+
+@media screen and (min-width: 48rem) {
+  body {
+    padding: 4rem;
+  }
+}
+
+@media screen and (min-width: 60rem) {
+  body {
+    width: 80%;
   }
 }
