--- a/public/assets/default.css
+++ b/public/assets/default.css
@@ -45,12 +45,16 @@ table {
   border-radius: 0.3rem;
   padding: 0.3rem;
   background-color: rgb(204, 204, 204);
+  font-size: 90%;
 }
 
 th {
   font-weight: bold;
   text-align: left;
   overflow-wrap: anywhere;
+}
+th[scope="row"] {
+  font-weight: normal;
 }
 
 @media (prefers-color-scheme: dark) {
